// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActiveUsers - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex flex-col gap-2 custom-active-users"
  data-testid="active-users"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Active Users
  </h2>
  <div
    class="flex flex-col gap-2"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="David"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=33"
        />
        <div
          data-testid="avatar-fallback"
        >
          D
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          David
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          42
           posts • 
          12
           tags
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Emma"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=9"
        />
        <div
          data-testid="avatar-fallback"
        >
          E
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          Emma
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          38
           posts • 
          8
           tags
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Frank"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=13"
        />
        <div
          data-testid="avatar-fallback"
        >
          F
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          Frank
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          35
           posts • 
          15
           tags
        </div>
      </div>
    </div>
  </div>
  <button
    class="w-full flex items-center justify-center gap-2 py-2 px-4 rounded-full border border-border hover:bg-secondary/80 cursor-pointer transition-colors"
    data-testid="sidebar-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users"
      data-testid="sidebar-button-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <path
        d="M16 3.128a4 4 0 0 1 0 7.744"
      />
      <path
        d="M22 21v-2a4 4 0 0 0-3-3.87"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
    </svg>
    <span
      data-testid="sidebar-button-text"
    >
      See All
    </span>
  </button>
</div>
`;

exports[`ActiveUsers - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="active-users"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Active Users
  </h2>
  <div
    class="flex flex-col gap-2"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="David"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=33"
        />
        <div
          data-testid="avatar-fallback"
        >
          D
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          David
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          42
           posts • 
          12
           tags
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Emma"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=9"
        />
        <div
          data-testid="avatar-fallback"
        >
          E
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          Emma
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          38
           posts • 
          8
           tags
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Frank"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=13"
        />
        <div
          data-testid="avatar-fallback"
        >
          F
        </div>
      </div>
      <div
        class="flex flex-col gap-0.5"
      >
        <div
          class="text-base font-bold text-foreground"
        >
          Frank
        </div>
        <div
          class="text-sm text-muted-foreground opacity-50"
        >
          35
           posts • 
          15
           tags
        </div>
      </div>
    </div>
  </div>
  <button
    class="w-full flex items-center justify-center gap-2 py-2 px-4 rounded-full border border-border hover:bg-secondary/80 cursor-pointer transition-colors"
    data-testid="sidebar-button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users"
      data-testid="sidebar-button-icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <path
        d="M16 3.128a4 4 0 0 1 0 7.744"
      />
      <path
        d="M22 21v-2a4 4 0 0 0-3-3.87"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
    </svg>
    <span
      data-testid="sidebar-button-text"
    >
      See All
    </span>
  </button>
</div>
`;
